src/style.css
*{
    box-sizing:border-box;
}
html{
    font-size:8px;
}

body {
    color:#4D5B9E;
    font-size:2rem;
    background:#f5f7fb url("./img/game-bckgrnd-mobile.svg");
    background-repeat:no-repeat;
    background-size:cover;
    background-position:center;
    margin:20px 30px;
    overflow-wrap:normal;
 }

 h1{
    font-size:2.5rem;
    font-weight:bold;
    text-align:center;
 }
 h2 {
    font-size:2.25rem;
    text-align:center;
    margin-bottom:30px;
 }

 .gameTitle{
    font-size:3rem;
 }
 .selected{
    background-color:lightblue;
}
.correct-answer{
    background-color:#94D7A2;
    font-weight:bold;
}
.incorrect-selected-answer{
   background-color:#F8BCBC;
   font-weight:100;
   color:#293264;
}
.incorrect-answer{
    color:#293264;
}
ul{
    max-width:350px;
    display:flex;
    flex-wrap:wrap;
    list-style:none;
    margin:0;
    padding:0;
}
li{
    max-width:100px;
    margin:0 10px 20px 0;
    border:2px solid black;
    padding:5px 10px;
    border-radius:10px;
}




.help{
    color:blue;
}
.me{
    font-weight:bold;
}
.question{
    max-width:350px;
    display:flex;
    flex-wrap:wrap;
    margin:20px auto 20px ;

}
.question h1{
    text-align:left;
}
/*
.question ul{
    max-width: 350px;
    display:flex;
    flex-wrap:wrap;
}
.question li{
    min-width:100px;
}*/

.bottom-btns{
    display:flex;
    justify-content:flex-start;
    align-items:center;
    width:350px;
    margin:0 auto;
}

.checkAnswers{
    margin:0 10px 0 0;
    background-color:#4D5B9E;
    color:#F5F7FB;
    border-radius:10px;
    padding:10px 20px;
}


.modal-heading{
    text-align:center;
}
.modal-btn-div{
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom:40px;
}
.modal-btn{
    background-color:lightblue;
    padding:5px 10px;
    margin:0 20px;
    border-radius:20px;
}

